...
      {
        text: 'Cancel',
        onPress: () => {},
        style: 'cancel',
      },
      {
        text: 'Remove',
        onPress: async () => {
          const key = `favorite-${coinData.id}`;

          await Storage.instance.remove(key);

          setIsFavorite(false);
...
            source={{uri: getSymbolIcon(coinData.nameid)}}
          />
          <Text style={styles.title}>{coinData.name}</Text>
        </View>

        <Pressable
          testID="btn-favorite"
          onPress={toggleFavorite}
          style={[
            styles['btn-favorite'],
            !isFavorite
              ? styles['btn-favorite-add']
              : styles['btn-favorite-remove'],
...
